package a;
public enum User {
	OWNER, COMPANY 
}
