@startuml
skinparam classAttributeIconSize 0
class BankProxy{
- bankAccount : BankAccountImpl
+ BankProxy(bankAccount : BankAccountImpl)
+ deposit(amount : double) : void
+ withdraw(amount : double) : boolean
+ balance() : double
}
BankProxy ..|> BankAccount
class Company{
+ {static} user : User
- emps : List<Employee>
+ admitPerson(name : String, salary : double) : void
+ paySalaries(month : int) : void
+ employees() : List<Employee>
}
class SharkCompany{
+ {static} main(args : String[]) : void
}
class Employee{
- salary : double
+ Employee(n : String, s : double)
+ getSalary() : double
}
Employee --|> Person
class BankAccountImpl{
- bank : String
- balance : double
BankAccountImpl(bank : String, initialDeposit : double)
+ getBank() : String
+ deposit(amount : double) : void
+ withdraw(amount : double) : boolean
+ balance() : double
}
BankAccountImpl ..|> BankAccount
class Person{
- name : String
- bankAccount : BankAccount
+ Person(n : String)
+ getName() : String
+ getBankAccount() : BankAccount
}
BankProxy--"- bankAccount" BankAccountImpl
Company--"+ {static} user" User
Person--"- bankAccount" BankAccount
interface BankAccount{
deposit(amount : double) : void
withdraw(amount : double) : boolean
balance() : double
}
enum User{
OWNER
COMPANY
}
Company--"- emps" Employee
SharkCompany-->Company
SharkCompany-->Employee
@enduml